--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "RTC",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint .",
+    "precommit": "npm run eslint",
+    "release": "npm run release:dev && npm run release:min",
+    "release:dev": "rollup -c rollup.config.js --environment TARGET:dev",
+    "release:min": "rollup -c rollup.config.js --environment TARGET:min"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,14 @@
     "RTC"
   ],
   "author": "yuhongda@rongcloud.cn",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
+    "eslint": "^5.6.1",
+    "rollup": "^0.59.1",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel-minify": "^6.1.1"
+  }
 }
