--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "release:min": "rollup -c rollup.config.js --environment TARGET:min",
     "release:es": "rollup -c rollup.config.js --environment TARGET:es"
   },
+  "precommit" : [ "npm run precommit" ],
   "repository": {
     "type": "git",
     "url": "https://gitlab2.rongcloud.net/yuhongda/web-rtc-sdk.git"
@@ -25,6 +26,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
     "eslint": "^5.6.1",
+    "precommit": "^1.2.2",
     "rollup": "^0.59.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-babel-minify": "^6.1.1"
