--- a/src/plugins/chrome/manifest.json
+++ b/src/plugins/chrome/manifest.json
@@ -1,10 +1,10 @@
 {
     "name" : "RongRTC",
-    "author": "RongRTC",
+    "author": "RongCloud",
     "version" : "1.0",
     "manifest_version" : 2,
     "minimum_chrome_version": "49",
-    "description" : "RongRTC Screen Sharing",
+    "description" : "RongRTC ScreenShare",
     "background": {
         "scripts": ["background-script.js"],
         "persistent": false
@@ -12,20 +12,17 @@
     "content_scripts": [ {
        "js": [ "content-script.js" ],
        "all_frames": true,
-       "run_at": "document_end",
-       "matches": [
-           "http://localhost:*/*",
-           "https://t-rtc.ronghub.com/*",
-           "https://d-rtc.ronghub.com/*",
-           "https://rtc.ronghub.com/*"
-       ]
+       "run_at": "document_start",
+       "matches": ["<all_urls>"]
     }],
     "externally_connectable": {
         "matches": [
-            "http://localhost:*/*",
-            "https://t-rtc.ronghub.com/*",
-            "https://d-rtc.ronghub.com/*",
-            "https://rtc.ronghub.com/*"
+           "https://rtc.ronghub.com/*",
+           "https://web.blinkcloud.cn/*",
+           "https://t-rtc.ronghub.com/*",
+           "https://d-rtc.ronghub.com/*",
+       "https://web.bailingcloud.com/*",
+           "https://web.blinktalk.site/*"
         ]
     },
     "icons" : {
