--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "release:min": "rollup -c rollup.config.js --environment TARGET:min",
     "release:es": "rollup -c rollup.config.js --environment TARGET:es"
   },
-  "precommit" : [ "npm run precommit" ],
+  "precommit": [
+    "npm run precommit"
+  ],
   "repository": {
     "type": "git",
     "url": "https://gitlab2.rongcloud.net/yuhongda/web-rtc-sdk.git"
@@ -28,7 +30,7 @@
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
-    "eslint": "^5.6.1",
+    "eslint": "^6.1.0",
     "precommit": "^1.2.2",
     "rollup": "^0.59.1",
     "rollup-plugin-babel": "^3.0.7",
