--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "release:min": "rollup -c rollup.config.js --environment TARGET:min",
     "release:es": "rollup -c rollup.config.js --environment TARGET:es"
   },
-  "precommit" : [ "npm run precommit" ],
+  "precommit": [
+    "npm run precommit"
+  ],
   "repository": {
     "type": "git",
     "url": "https://gitlab2.rongcloud.net/yuhongda/web-rtc-sdk.git"
